fix purple bar spacing

--- a/resources/public/styles/main.css
+++ b/resources/public/styles/main.css
@@ -933,8 +933,8 @@ button:hover {
   font-weight: 700;
 }
 
-.pt-20 {
-  padding-top: 20px
+.pt-6 {
+  padding-top: 6px;
 }
 
 .flex {
